...
    <string name="textview_huidigRoute"><u>Huidige route</u></string>
    <string name="menuitem_routes">Routes</string>
    <string name="menuitem_sos">Nood</string>
    <string name="menuitem_contact">Contact</string>
    <string name="contact_phone">+32 2 422 59 11</string>
    <string name="contact_email">info@damiaanactie.be</string>
    <string name="sos_call_em">Noodcentrale</string>
    <string name="sos_call">Helpdesk Damiaanactie</string>
    <string name="login">Inloggen</string>
    <string name="logout">Uitloggen</string>
    <string name="email">e-mailadres</string>
    <string name="password">wachtwoord</string>
    <string name="no_account">Nog geen account?</string>
...
